--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     </header>
     <div>
         <button onclick="clique()" id="button">Standard</button>
+        <button onclick="randomColor()" id="button">Random</button>
+        <p id="randomColor"></p>
         <input onkeypress="changeColor(13)" type="text" id="color" placeholder="Only English. Ex: Green or #00BFFF">
-        <button onclick="changeColor()" id="change">Change Color</button>
+        <button onclick="changeBg()" id="change">Change Color</button>
     </div>
 
     <script src="script.js"></script>
