--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div>
         <button onclick="clique()" id="button">Standard</button>
         <button onclick="randomColor()" id="button">Random</button>
+        <button onclick="automatic()" id="button">Automatic</button>
         <p id="randomColor"></p>
         <input onkeypress="changeColor(13)" type="text" id="color" placeholder="Only English. Ex: Green or #00BFFF">
         <button onclick="changeBg()" id="change">Change Color</button>
