--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <button onclick="buttonClick('cyan')" class="cyan"></button>
     </header>
     <section id="container">
-        <div id="content">
+        <div id="btn">
             <button onclick="clique()" id="button">Standard</button>
             <button onclick="randomColor()" id="button">Random</button>
             <button onclick="automatic()" id="button">Automatic</button>
-            <p id="randomColor"></p>
-            <input onkeypress="changeColor(13)" type="text" id="color" placeholder="Only English. Ex: Green or #00BFFF"></br>
-            <button onclick="changeBg()" id="change">Change Color</button>
         </div>
+            <p id="randomColor"></p>
+            <input onkeypress="changeColor(13)" type="text" id="color" placeholder="Only English. Ex.: Green or #00BFFF"></br>
+            <button onclick="changeBg()" id="change">Change Color</button>
     </section>
 
     <script src="script.js"></script>
